Fix scrollbar on WIN

--- a/src/client/style-5t-mqueries.css
+++ b/src/client/style-5t-mqueries.css
@@ -227,7 +227,7 @@ strong.trigger-option{
 
 #tripmode {margin-top:15px;}
 #tripmode li label{
-	width:147px;
+	width:139px;
 	font-weight: bold;
 }
 
